# calepin

./: .gitignore  .page_cache.json  404.html  CLAUDE.md  Cargo.toml  EXTENSIONS.md  Makefile  README.md  TODO.qmd  index.html  knitr_preamble.qmd  plan.md  plan_astro.md  plan_metadata.md  plan_nomenclature.md  quarto_yaml_variables.qmd  spec-toml-formats.md  tera_ideas.qmd
calepin/: Cargo.toml
calepin/benches/: template_bench.rs
calepin/src/: batch.rs  brand.rs  cli.rs  compile.rs  context.rs  date.rs  formats.rs  jinja_engine.rs  main.rs  paths.rs  pipeline.rs  plugin_manifest.rs  plugins.rs  project.rs  registry.rs  site_builder.rs  tera_engine.rs  theme_manifest.rs  themes.rs  tools.rs  types.rs  typst_compile.rs  util.rs  value.rs  website.rs
calepin/src/assets/website/: calepin.css
calepin/src/base/: mod.rs  paths.rs  types.rs  value.rs
calepin/src/cli/: args.rs  extract_pydocs.py  extract_rdocs.R  flush.rs  info.rs  init_sidecar.rs  mod.rs  new_book.rs  new_gibberish.rs  new_notebook.rs  new_partials.rs  new_website.rs  preview.rs  render.rs  theme.rs
calepin/src/cli/man/: mod.rs  rdoc.rs
calepin/src/collection/: assets.rs  config.rs  contents.rs  context.rs  discover.rs  icons.rs  mod.rs  orchestrator.rs  page_cache.rs  partials.rs  render.rs  templates.rs  templating.rs
calepin/src/commands/: info.rs  mod.rs  new.rs  preview.rs  render.rs
calepin/src/config/: collection.toml  context.rs  document.toml  load.rs  merge.rs  mod.rs  modules.toml  parse.rs  paths.rs  shared.toml  targets.rs  types.rs  value.rs
calepin/src/emit/: html.rs  latex.rs  markdown.rs  mod.rs  typst.rs
calepin/src/emit/convert_math/: ast.rs  mod.rs
calepin/src/engines/: block.rs  cache.rs  diagram.rs  inline.rs  mod.rs  python.rs  r.rs  sh.rs  subprocess.rs  util.rs
calepin/src/filters/: bibliography.rs  callout.rs  code.rs  crossref.rs  external.rs  figure.rs  highlighting.rs  math.rs  mod.rs  shortcodes.rs  theorem.rs
calepin/src/formats/: html.rs  latex.rs  markdown.rs  mod.rs  revealjs.rs  typst.rs  word.rs
calepin/src/jinja/: functions.rs  includes.rs  lipsum.rs  mod.rs  protection.rs  variables.rs
calepin/src/man/: mod.rs
calepin/src/man/python/: extract.rs  google.rs  mod.rs  numpy.rs  render.rs  sphinx.rs  types.rs
calepin/src/man/r/: extract_rdocs.R  mod.rs  rdoc.rs
calepin/src/math/: emitter.rs  mod.rs  parser.rs
calepin/src/metadata/: merge.rs  mod.rs  parse.rs  types.rs
calepin/src/modules/: manifest.rs  mod.rs  registry.rs  theme.rs  transform_body.rs  transform_document.rs  transform_page.rs
calepin/src/modules/append_footnotes/: mod.rs
calepin/src/modules/builtin/: mod.rs
calepin/src/modules/callout/: mod.rs
calepin/src/modules/convert_math/: mod.rs  symbols.rs
calepin/src/modules/convert_math_latex_typst/: mod.rs
calepin/src/modules/convert_svg_pdf/: mod.rs
calepin/src/modules/document_listing/: mod.rs
calepin/src/modules/embed_images/: mod.rs
calepin/src/modules/embed_images_html/: mod.rs
calepin/src/modules/figure/: mod.rs
calepin/src/modules/highlight/: mod.rs  transform_page.rs
calepin/src/modules/inject_color_defs_latex/: mod.rs
calepin/src/modules/inject_syntax_css_html/: mod.rs
calepin/src/modules/layout/: mod.rs
calepin/src/modules/listing/: mod.rs
calepin/src/modules/lorem/: mod.rs
calepin/src/modules/pagebreak/: mod.rs
calepin/src/modules/placeholder/: mod.rs
calepin/src/modules/split_slides/: mod.rs
calepin/src/modules/split_slides_html/: mod.rs
calepin/src/modules/table/: mod.rs
calepin/src/modules/tabset/: mod.rs
calepin/src/modules/theorem/: mod.rs
calepin/src/modules/video/: mod.rs
calepin/src/parse/: blocks.rs  mod.rs  options.rs  yaml.rs
calepin/src/plugins/: manifest.rs  mod.rs  registry.rs  theme.rs
calepin/src/preview/: mod.rs  reload.rs  server.rs  watcher.rs
calepin/src/project/: calepin.toml  content.rs  defaults.rs  mod.rs  targets.rs
calepin/src/references/: bibliography.rs  crossref.rs  mod.rs
calepin/src/render/: ast.rs  convert.rs  div.rs  elements.rs  formats.rs  highlighting.rs  html_ast.rs  html_emit.rs  latex.rs  latex_emit.rs  markdown.rs  markdown_emit.rs  markers.rs  metadata.rs  mod.rs  pipeline.rs  span.rs  svg.rs  template.rs  typst_ast.rs  typst_emit.rs  vars.rs
calepin/src/scaffold/: index.qmd
calepin/src/site/: assets.rs  config.rs  context.rs  discover.rs  icons.rs  mod.rs  render.rs  search.rs  templates.rs
calepin/src/structures/: figure.rs  layout.rs  mod.rs  table.rs  tabset.rs
calepin/src/utils/: cache.rs  date.rs  escape.rs  links.rs  lipsum.rs  mod.rs  paths.rs  tools.rs  url.rs  util.rs
calepin/tests/: bench_compile.rs  modules.rs  typst_pdf.rs
(+1170 files in other folders)
